tests/baselines/reference/unusedFunctionsinNamespaces5.errors.txt
unusedFunctionsinNamespaces5.ts(9,14): error TS6133: 'function3' is declared but its value is never read.
unusedFunctionsinNamespaces5.ts(13,14): error TS6133: 'function4' is declared but its value is never read.


==== unusedFunctionsinNamespaces5.ts (2 errors) ====
    namespace Validation {
        var function1 = function() {
        }
    
        export function function2() {
    
        }
    
        function function3() {
                 ~~~~~~~~~
!!! error TS6133: 'function3' is declared but its value is never read.
            function1();
        }
    
        function function4() {
                 ~~~~~~~~~
!!! error TS6133: 'function4' is declared but its value is never read.
    
        }
    }